Fix alignment of headline action

--- a/css/style.scss
+++ b/css/style.scss
@@ -106,6 +106,7 @@ footer {
     border-radius: 4px;
     padding: 15px;
     color: white;
+    text-align: center;
     font-weight: bold;
     text-decoration: none;
     transition: background-color .1s ease-in-out;
